[gd_scene load_steps=13 format=3 uid="uid://ed0oxa1u4xkq"]

[ext_resource type="Script" path="res://scripts/title_screen_button.gd" id="1_q4pph"]
[ext_resource type="FontFile" uid="uid://b612p0xldmvjo" path="res://assets/font/OutfitVariable.ttf" id="2_6nu8f"]
[ext_resource type="AudioStream" uid="uid://dmrnk4duhjju1" path="res://assets/sfx/select_ui.ogg" id="2_ehi2c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6m2vc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_txvsx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hurok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ci6k6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4vr2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4f1mq"]
bg_color = Color(0.0862745, 0.0901961, 0.101961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontVariation" id="FontVariation_1ko81"]
base_font = ExtResource("2_6nu8f")
variation_opentype = {
2003265652: 600
}

[sub_resource type="LabelSettings" id="LabelSettings_tvwpm"]
font = SubResource("FontVariation_1ko81")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vs3ha"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TitleScreenButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_6m2vc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_txvsx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hurok")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ci6k6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s4vr2")
action_mode = 0
flat = true
text_overrun_behavior = 2
clip_text = true
script = ExtResource("1_q4pph")

[node name="Front" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 720)
mouse_filter = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4f1mq")

[node name="ButtonLabel" type="Label" parent="Front"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "NAME"
label_settings = SubResource("LabelSettings_tvwpm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vs3ha")

[node name="ClickAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ehi2c")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="item_rect_changed" from="Front" to="." method="_on_button_image_item_rect_changed"]
